# CPP_Playground

./: CMakeLists.txt  main.cpp
Classes/Constructors/: CCustomArray.h
Classes/OOD/: CEntity.h  CValue.h
Classes/OOD/Observer/: CWeatherData.cpp  CWeatherData.h  CWeatherData.ixx  ObserverMain.cpp  ObserverMain.h  TObserver.h
Classes/OOD/Strategy/: CCircle.h  CSquare.h  IShape.h  StrategyMain.cpp  StrategyMain.h
Classes/OOD/Strategy/Strategies/: CAnotherCircleStrategy.h  COpenGLCircleStrategy.h  COpenGLSquareStrategy.h  IDrawStrategy.h
Classes/OperatorOverloading/: FreeOperator.h  StructCast.h
Classes/Rule_of_/: RuleOfFive.h
Concepts/: CDividable.h  CNotNullptr.h  CPoint3D.h
Constructors/: CBox3d.cpp  CBox3d.h
Heap/: CUser.cpp  CUser.h
Modules/: AirlineTicket.ixx  ModuleExample.ixx  ModuleInterfaceUnit.ixx  Playground.Test.ixx  Playground.ixx  Position.ixx
Modules/Abstract/: MImplementation1.ixx  MInterface.ixx
ParallelProgramming/: FuturePromises.ixx  MAccount.ixx
ProxyObjects/: CVec3D.ixx  CWriteReadLazy.h  ExtensionMethod.h
Random/: ScopeRAII.h  WrapDelete.h
SOLID/: OCP.ixx  SRP.ixx
Stack/: StackMain.cpp  StackMain.h  stack.cpp  stack.h
Test/: CMakeLists.txt  main.cpp
cadwork_plugin/: CMakeLists.txt  IButton.h  RestRequests.ixx  TestModule.ixx  library.cpp  library_api.h
cadwork_plugin/Rest-Bridge/: BridgeMain.h
cadwork_plugin/Rest-Bridge/Abstraction/: CBridgeAbstraction.cpp  CBridgeAbstraction.h  IBridgeAbstraction.h
cadwork_plugin/Rest-Bridge/Implementation/: CConcreteImplementationA.cpp  CConcreteImplementationA.h  CConcreteImplementationB.cpp  CConcreteImplementationB.h  IBridgeImplementation.h
